# pratt-parser-calculator

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  default.nix  flake.nix
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  calculator.cpp  calculator.hpp  sexpr.cpp  sexpr.hpp
include/: lexer.hpp  parser.hpp
include/pratt-parser/: lexer.hpp  parser.hpp  token.hpp
src/: calculator.cpp  calculator.hpp  sexpr.cpp  sexpr.hpp
test/: CMakeLists.txt
test/source/: pratt-parser_test.cpp
tests/: calculator.cpp  main.cpp
